Update GitHub Actions workflow for Sumika watcher

--- a/.github/workflows/watch.yml
+++ b/.github/workflows/watch.yml
@@ -2,26 +2,46 @@ name: Sumika Goods Watcher
 
 on:
   schedule:
-    - cron: "*/5 * * * *"   # ← 5分おき
-  workflow_dispatch:        # 手動実行も可能
+    - cron: "*/5 * * * *"   # 5分おき（UTC）
+  workflow_dispatch:
+
+concurrency:
+  group: sumika-watcher
+  cancel-in-progress: true
 
 jobs:
   watch:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: "3.11"
 
     - name: Install dependencies
       run: pip install -r requirements.txt
 
-    - name: Run watcher
+    - name: Restore state
+      uses: actions/cache@v4
+      with:
+        path: .sumika_state.json
+        key: sumika-state
+
+    - name: Run watcher once
       env:
         LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}
-      run: python watch_iroha.py
+        TARGET_URL: https://official-goods-store.jp/sumika/v2/product/detail/SMK272
+        RUN_ONCE: "1"
+      run: python -u watch_iroha.py
+
+    - name: Save state
+      if: always()
+      uses: actions/cache/save@v4
+      with:
+        path: .sumika_state.json
+        key: sumika-state
