--- a/.github/workflows/watch.yml
+++ b/.github/workflows/watch.yml
@@ -1,47 +1,31 @@
-name: Sumika Goods Watcher
+name: Sumika Goods Watcher (Test Run)
 
 on:
-  schedule:
-    - cron: "*/5 * * * *"   # 5分おき（UTC）
   workflow_dispatch:
 
-concurrency:
-  group: sumika-watcher
-  cancel-in-progress: true
-
 jobs:
-  watch:
+  watch-test:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.11"
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
-    - name: Install dependencies
-      run: pip install -r requirements.txt
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
-    - name: Restore state
-      uses: actions/cache@v4
-      with:
-        path: .sumika_state.json
-        key: sumika-state
+      # ★ 前回状態を「売り切れだった(true)」としてセット
+      - name: Prime state as sold out
+      　run: echo '{"sold_out": true}' > .sumika_state.json
 
-    - name: Run watcher once
-      env:
-        LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}
-        TARGET_URL: https://official-goods-store.jp/sumika/v2/product/detail/SMK272
-        RUN_ONCE: "1"
-      run: python -u watch_iroha.py
-
-    - name: Save state
-      if: always()
-      uses: actions/cache/save@v4
-      with:
-        path: .sumika_state.json
-        key: sumika-state
+      - name: Run watcher once (simulate availability)
+        env:
+          LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}
+          TARGET_URL: https://example.com/
+          RUN_ONCE: "1"
+        run: python -u watch_iroha.py
