--- a/.github/workflows/watch.yml
+++ b/.github/workflows/watch.yml
@@ -33,3 +33,15 @@ jobs:
           key: sumika-state
 
       - name: Run watcher once
+        env:
+          LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}
+          TARGET_URL: https://official-goods-store.jp/sumika/v2/product/detail/SMK272
+          RUN_ONCE: "1"
+        run: python -u watch_iroha.py
+
+      - name: Save state
+        if: always()
+        uses: actions/cache@v4
+        with:
+          path: .sumika_state.json
+          key: sumika-state
