--- a/.github/workflows/watch.yml
+++ b/.github/workflows/watch.yml
@@ -15,33 +15,33 @@ jobs:
     timeout-minutes: 5
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.11"
 
-      - name: Install dependencies
-        run: pip install -r requirements.txt
+    - name: Install dependencies
+      run: pip install -r requirements.txt
 
-      - name: Restore state
-        uses: actions/cache@v4
-        with:
-          path: .sumika_state.json
-          key: sumika-state
+    - name: Restore state
+      uses: actions/cache@v4
+      with:
+        path: .sumika_state.json
+        key: sumika-state
 
-      - name: Run watcher once
-        env:
-          LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}
-          TARGET_URL: https://official-goods-store.jp/sumika/v2/product/detail/SMK272
-          RUN_ONCE: "1"
-        run: python -u watch_iroha.py
+    - name: Run watcher once
+      env:
+        LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}
+        TARGET_URL: https://official-goods-store.jp/sumika/v2/product/detail/SMK272
+        RUN_ONCE: "1"
+      run: python -u watch_iroha.py
 
-      - name: Save state
-        if: always()
-        uses: actions/cache@v4
-        with:
-          path: .sumika_state.json
-          key: sumika-state
+    - name: Save state
+      if: always()
+      uses: actions/cache/save@v4
+      with:
+        path: .sumika_state.json
+        key: sumika-state
